fix exapding icons not showing up in area of study sidebar

--- a/src/components/area-of-study.scss
+++ b/src/components/area-of-study.scss
@@ -99,7 +99,6 @@
 	}
 
 	.area--open-indicator {
-		padding: 0 0.5em;
 		margin-right: 0.5em;
 		cursor: pointer;
 	}
